Upgrade to langchain 0.72. Resolve prompts to better handle chat content. And to always guide a final response. Alignment on home header. Chat history and memories are only provided on the first step.

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -33,10 +33,10 @@
 }
 
 .navlinks {
-  width: 20rem;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: flex-end;
   align-items: center;
+  margin-right: 1rem;
 }
 
 .apptitle {
